[project]
name = "map-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "dotenv>=0.9.9",
    "fastkml==0.12",
    "idna==3.6",
    "lxml==5.0.0",
    "pygeoif==0.7",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "setuptools==69.0.3",
    "six==1.16.0",
    "urllib3==2.1.0",
]
